[package]
name = "async_fuse"
version = "0.1.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
env_logger = "0.6.0"
futures = "0.3.5"
futures-core = "0.3.5"
futures-io = "0.3.5"
futures-util = "0.3.5"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.6"
nix = "0.17.0"
pin-project-lite ="0.1.7"
smol = "0.1.11"

[features]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
