[package]
name = "async_fuse"
version = "0.1.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2018"
description = "Distributed cloud native storage system"
repository = "https://github.com/datenlord/datenlord"
readme = "README.md"
license = "MIT"
keywords = ["Storage"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-bytes = "0.1.4"
anyhow = "1.0.31"
clap = "2.33.3"
crossbeam-channel = "0.4.2"
env_logger = "0.7.1"
futures = "0.3.5"
futures-core = "0.3.5"
futures-io = "0.3.5"
futures-util = "0.3.5"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.6"
memchr = "2.3.3"
nix = "0.18.0"
pin-project-lite ="0.1.7"
smol = "0.1.11"
utilities = { git = "https://github.com/datenlord/utilities", rev = "4ef408d" }

[features]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
abi-7-20 = ["abi-7-19"]
abi-7-21 = ["abi-7-20"]
abi-7-22 = ["abi-7-21"]
abi-7-23 = ["abi-7-22"]
abi-7-24 = ["abi-7-23"]
abi-7-25 = ["abi-7-24"]
abi-7-26 = ["abi-7-25"]
abi-7-27 = ["abi-7-26"]
abi-7-28 = ["abi-7-27"]
abi-7-29 = ["abi-7-28"]
abi-7-30 = ["abi-7-29"]
abi-7-31 = ["abi-7-30"]
