[package]
name = "async_fuse"
version = "0.1.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2018"
description = "Distributed cloud native storage system"
repository = "https://github.com/datenlord/datenlord"
readme = "README.md"
license = "MIT"
keywords = ["Storage"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-utils = "1.0.0"
anyhow = "1.0.31"
async-trait = "0.1.48"
better-as = "0.2.0"
clap = "2.33.3"
common = {path = "../common"}
crossbeam-channel = "0.5.0"
crossbeam-queue = "0.3.1"
crossbeam-utils = "0.8.1"
env_logger = "0.8.1"
event-listener = "2.5.1"
futures = "0.3.5"
libc = "0.2.79"
lockfree-cuckoohash = {git = "https://github.com/datenlord/lockfree-cuckoohash", rev = "e5849f18"}
log = "0.4.6"
memchr = "2.3.4"
nix = "0.20.0"
once_cell = "1.7.2"
parking_lot = "0.11.1"
pin-project-lite ="0.2.0"
priority-queue = "1.1.0"
ring-io = { git = "https://github.com/datenlord/ring-io", rev = "2f0506c" }
smol = { version = "1.2.5" }
thiserror = "1.0.22"
utilities = { git = "https://github.com/datenlord/utilities", rev = "4ef408d" }

[features]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
abi-7-20 = ["abi-7-19"]
abi-7-21 = ["abi-7-20"]
abi-7-22 = ["abi-7-21"]
abi-7-23 = ["abi-7-22"]
abi-7-24 = ["abi-7-23"]
abi-7-25 = ["abi-7-24"]
abi-7-26 = ["abi-7-25"]
abi-7-27 = ["abi-7-26"]
abi-7-28 = ["abi-7-27"]
abi-7-29 = ["abi-7-28"]
abi-7-30 = ["abi-7-29"]
abi-7-31 = ["abi-7-30"]
