[package]
name = "csi"
version = "0.1.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2018"
description = "Kubernetes CSI implementation for DatenLord"
repository = "https://github.com/datenlord/datenlord"
readme = "README.md"
license = "MIT"
keywords = ["CSI", "K8S"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.0"
bincode = "1.3.1"
clap = "2.33.3"
env_logger = "0.8.1"
flate2 = "1.0.16"
futures = "0.3.5"
grpcio = { version = "0.8.0", default-features = false, features = ["protobuf-codec"] }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
lazy_static = "1.4.0"
log = "0.4.11"
nix = "0.20.0"
protobuf = "2.16.2"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
smol = { version = "1.2.5" }
tar = "0.4.29"
thiserror = "1.0"
tiny_http = "0.8.0"
utilities = { git = "https://github.com/datenlord/utilities", rev = "4ef408d" }
uuid = { version = "0.8.1", features = ["v4"] }
walkdir = "2.3.1"
common = {path = "../common"}

[build-dependencies]
protoc-grpcio = "3.0.0"

[dev-dependencies]
mock-etcd = { git = "https://github.com/datenlord/mock-etcd", rev = "75f09e2" }

[[bin]]
path = "src/bin/bind_mounter.rs"
name = "bind_mounter"
