[package]
name = "fuse_ll"
version = "0.1.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.0"
libc = "0.2"
log = "0.4.6"
nix = "0.17.0"
clap = "2.33.1"
bincode = "1.3.1"

[dev-dependencies]
fuse_ll = { path = "." }

#[profile.dev]
#codegen-units = 32 # parallel compiling, no optimizations

#[profile.release]
#debug = true
#lto = true # Link-Time Optimizations, no parallel compiling
#opt-level = 2

#[profile.test]
#debug = true
#opt-level = 1

#[profile.doc]
#debug-assertions = false
#panic = 'abort' # ‘unwind’

[features]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
