[package]
name = "fuse_rs_demo"
version = "0.1.0"
authors = ["pwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2.24"
log = "0.4.6"
rustc-serialize = "0.3.18"
time = "0.1.38"
env_logger = "0.6.0"

[[bin]]
name = "memfs"
