[package]
name = "macro-utils"
version = "0.1.0"
authors = ["DatenLord <dev@datenlord.io>"]
description = "A utility crate of macros for `DatenLord`."
edition = "2021"
license = "MIT"
readme = "./README.md"
keywords = ["macro", "utility"]
categories = ["Development tools"]
repository = "https://github.com/datenlord/datenlord"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = {version = "2.0.39", features = ["full", "extra-traits"]}

[dev-dependencies]
trybuild = "1"
