[package]
name = "datenlordsdk"
version = "0.1.0"
authors = ["DatenLord <dev@datenlord.io>"]
edition = "2021"
description = "Distributed cloud native storage system"
repository = "https://github.com/datenlord/datenlord"
readme = "README.md"
license = "MIT"
keywords = ["DatenLord", "SDK", "Python"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "datenlordsdk"
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
datenlord = { path = "../../../" }
clap = { version = "4", features = ["derive"] }
once_cell = "1.17.1"
bytes = "1.6.0"
parking_lot = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.10"
async-trait = "0.1.48"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.31"
clippy-utilities = "0.1.0"
nix = { version = "0.28.0", features = ["fs", "ioctl", "signal", "user", "mount", "socket"] }
serde-xml-rs = "0.6"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0"
thiserror = "1.0.22"
opendal = {version = "0.43.0", features = ["layers-prometheus"]}
pyo3 = { version = "0.21.2", features = ["abi3", "abi3-py311"] }
pyo3-asyncio = { package = "pyo3-asyncio-0-21", version = "0.21", features = [
  "tokio-runtime",
]}

[package.metadata.maturin]
bindings = "pyo3"